improve font-weight for footer and moved the text for light-screen

--- a/web-lab1/index.html
+++ b/web-lab1/index.html
@@ -85,10 +85,10 @@
                 <p class="text-introduce-light">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
                      ligula eget dolor. Aenean massa.
                      Cum sociis natoque penatibus et magnis
-                     dis parturient montes, nascetur ridiculus mus. 
+                     dis parturient montes, nascetur ridiculus  
                 </p>
                 <p class="text-introduce-light" style="padding-bottom: 35px" >
-                    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
+                    mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
                      Nulla consequat massa quis enim.
                 </p>
                 <div class="castle-block">
